# storage/api-docs/api-docs.json
@@ -228,6 +228,36 @@
                 }
             }
         },
+        "/test/res": {
+            "get": {
+                "tags": [
+                    "test"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Returns some sample category things"
+                    },
+                    "400": {
+                        "description": "Error: Bad request. When required parameters were not supplied."
+                    }
+                }
+            }
+        },
+        "/test/down": {
+            "get": {
+                "tags": [
+                    "test"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Returns some sample category things"
+                    },
+                    "400": {
+                        "description": "Error: Bad request. When required parameters were not supplied."
+                    }
+                }
+            }
+        },
         "/test/file": {
             "post": {
                 "tags": [
